feat/auth-register: Implement Email Verification module
